removed the FTB Teams